# Bignum

./: CMakeLists.txt  LICENSE  README.md
src/: Bignum.cpp  Bignum.hpp  Bignum_operators.inl  CMakeLists.txt
ut/: CMakeLists.txt  TestBignumOperations.cpp  TestUtils.hpp  TestWithGeneratedInput.cpp
ut/generated_input/: add.json  div.json  generate_test_data.py  mod.json  mul.json  sub.json
